--- a/templates/layout.html
+++ b/templates/layout.html
@@ -115,7 +115,7 @@
 
       <!--First slide-->
       <div class="carousel-item active">
-        <div class="view" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/91UXKDjZgmL._AC_SL1500_.jpg'); background-repeat: no-repeat; background-size: cover;">
+        <div class="view" style="background-image: url('https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80'); background-repeat: no-repeat; background-size: cover;">
 
           <!-- Mask & flexbox options-->
           <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
@@ -123,15 +123,17 @@
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h1 class="mb-4">
-                <strong>THERAPEUTIC MAGNETS</strong>
+                <strong>Cheese Pizza</strong>
               </h1>
 
               <p>
-                <strong>Soft </strong>
+                <strong>Italian </strong>
               </p>
 
               <p class="mb-4 d-none d-md-block">
-                <strong>we have integrated eight (8) therapeutic magnets to contribute in alleviating pain by means of static field therapy. Not only does our product provide upper back support, lower back support and lumbar support, it can also soothe sore muscle joints and muscles; improve circulation and relieve stiffness and tension in as early as 30 days! </strong>
+                <strong>After the interesting experience with this restaurant. I decided to have a weekly visit to a different pizza restaurant to try different pizza types and explore the best restaurant.
+
+                Indeed, pizza can be eaten anytime, anywhere hot or cold. </strong>
               </p>
             </div>
             <!-- Content -->
@@ -145,7 +147,7 @@
 
       <!--Second slide-->
       <div class="carousel-item">
-        <div class="view" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/71LYEaf9C3L._AC_SL1500_.jpg'); background-repeat: no-repeat; background-size: cover;">
+        <div class="view" style="background-image: url('https://images.unsplash.com/photo-1555072956-7758afb20e8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'); background-repeat: no-repeat; background-size: cover;">
 
           <!-- Mask & flexbox options-->
           <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
@@ -153,15 +155,17 @@
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h1 class="mb-4">
-                <strong>ERGONOMIC </strong>
+                <strong>Mozzarella </strong>
               </h1>
 
               <p>
-                <strong>elegent </strong>
+                <strong> Interesting  </strong>
               </p>
 
               <p class="mb-4 d-none d-md-block">
-                <strong>Not only will you develop a straight back, strengthened shoulders and neck but you get to create good posture that will add up to your self-esteem and confidence. Experience back pain relief, lower back pain relief, neck pain relief and improvements in your overall posture with the aid of our back posture corrector. </strong>
+                <strong>The third was romana diavolo pizza, which of the same dough but they extend the dough until it becomes bigger and thinner. It was made of  beef, pepperoni, cold pepper and tomato sauce.
+
+                Personally, I do not like meat in the pizza nor the pepperoni, so I did not like this pizza and it was very ordinary. </strong>
               </p>
 
             </div>
@@ -176,7 +180,7 @@
 
       <!--Third slide-->
       <div class="carousel-item">
-        <div class="view" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/91wNAB28U%2BL._AC_SL1500_.jpg'); background-repeat: no-repeat; background-size: cover;">
+        <div class="view" style="background-image: url('https://images.unsplash.com/photo-1561350111-7daa4f284bc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80'); background-repeat: no-repeat; background-size: cover;">
 
           <!-- Mask & flexbox options-->
           <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
@@ -184,15 +188,19 @@
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h1 class="mb-4">
-                <strong> VERSATILE </strong>
+                <strong> Pizza Pizza </strong>
               </h1>
 
               <p>
-                <strong> best fabric </strong>
+                <strong> Tasty  </strong>
               </p>
 
               <p class="mb-4 d-none d-md-block">
-                <strong>We have constructed our back posture brace with adjustable straps fastened by a durable Velcro and sturdy buckles for a guaranteed fit for all body shapes and sizes. It can be worn in three (3) different ways and get the support that you need. Utilize it as a lumbar support, as a back straightener for your upper back support or wear it for lower back lower back pain relief. All three ways made into one (1) product. </strong>
+                <strong>The pizza dough was light and soft and its ingredients were excellent in terms of quantity and taste.
+
+                The first was “Polo Kun Fungi” pizza. It  was made of chicken, pashamel sauce and mushroom.
+
+                The second was sausage pizza. It was made of sausage, mushroom sauce and mozzarella </strong>
               </p>
             </div>
             <!-- Content -->
